assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP&family=Roboto:wght@300&display=swap');

* {
    margin: 0;
    padding: 0;
    border: none;
}

body { 
    background-color: rgba(188, 164, 215, 0.5);
}

h1, h2 {
    font-family: Roboto, sans-serif;
    text-transform: uppercase;
    text-decoration: underline;
    text-align: center;
    letter-spacing: 3px;
    margin-top: 20px;
    color: #DDEDF5;
}

h3 {
    font-family: Roboto, sans-serif;
    color: #3a3a3a;
    text-align: left;
    clear: both;
    height: 2px;
    margin-left: 20px;
    margin-top: 20px;
    margin-bottom: 30px;
}

h4 {
    font-size: medium;
    font-family: Roboto, sans-serif;
    color: #3a3a3a;
}

h5 {
    font-family: Roboto, sans-serif;
    color: #3a3a3a;
    font-size: medium;
    margin-left: 20px;
    margin-top: 20px;
}

p { 
    font-family: Noto Sans, sans-serif;
    text-align: center;
    padding: 10px;
    margin-top: 20px;
    color: #FCFAF5;
}

li {
    list-style-type: none;
    padding: 5px;
    text-align: center;
    color: #FCFAF5;
}

img {
    height: 300px;
    width: 15%;
    padding: 15px;
    margin-left: 150px;
    display: inline;   
}

#home-photos {
    width: 100%;
}

footer {
    margin-top: 10px;
    height: 100px;
    position: sticky;
    clear:both;
}

/* form styling */

.check-in-page {
    height: 900px;
    clear: both;
    color: rgb(2,0,36);
    width: 70%;
    margin: 0 auto;
    background: linear-gradient( rgba(2, 129, 207,0.4), rgba(0, 137, 186, 0.3), rgba(131, 94, 194,0.2));
    border-radius: 7px;
}

label {
    margin: 0 auto;
    margin-bottom: 10px;
    padding: 15px 5px;
    display: block;
    width: 20%;
    height: 15px;
    text-align: center;

}

input {
    
    background: transparent;
    border: 1px solid #3a3a3a;
    border-radius: 7px;
    margin: 0 auto;
    padding: 5px 5px;
    display: block;
    width: 20%;
    text-align: center;
}

textarea {
    display: block;
    margin: 0 auto;
    padding: 15px 5px;
    width: 40%;
    height: 30%;
    background: transparent;
    border: 1px solid #3a3a3a;
    border-radius: 7px;
}

.diary-submit-button {
    display: inline;
    background-color: rgba(214, 93, 176, 0.7);
    color: white;
    margin-left: 25%;
    margin-top: 10px;
    padding: 15px 0 20px 0;
    border-radius: 5px;
    font-size: inherit;
}

.clear-submit-button {
    display: inline;
    background-color: rgba(214, 93, 176, 0.7);
    color: white;
    margin-left: 100px;
    margin-top: 10px;
    padding: 15px 0 20px 0;
    border-radius: 5px;
    font-size: inherit;
    
}


.diary-submit-button:hover {
    display: inline;
    background-color: #D8BFD8;
    color: #F04FC0;
    margin-left: 25%;
    margin-top: 10px;
    padding: 15px 0 20px 0;
    border-radius: 5px;
    font-size: inherit;
}

.clear-submit-button:hover {
    background-color: #D8BFD8;
    color: #F04FC0;
    margin-left: 100px;
    margin-top: 10px;
    padding: 15px 0 20px 0;
    border-radius: 5px;
    font-size: inherit;
}
 
.active {
    border-bottom: 1px solid #a393eb;
}

#logo {
    font-size: 450%;
    padding-left: 20px;
    height: 75px;
    color: #9C89B3;
    letter-spacing: 3px;
    text-decoration: none;
    float: left; 
}

#main-page-response {
    height: 1200px;
    width: 100%;
}

/* paragraph styling on index.html (home) page */

.float-right {
    float: right;
    width: 33%;
    padding: 50px 30px;  
}


.float-left {
    float: left;
    width: 33%;
    padding: 50px 30px;   
}

.float-center {
    margin: 0 auto;
    width: 33%;
    padding: 50px 30px; 
}
/* tutorial.html page styling */

.tutorial-float-right{
    float: right;
    width: 33%;
    padding: 50px 30px;
    
}

.tutorial-float-center{
    margin: 0 auto;
    width: 33%;
    padding: 50px 30px;

}

.tutorial-float-left{
    float: left;
    width: 33%;
    padding: 50px 30px;
    
}

.tutorial-text p {
    color: #3a3a3a;
    text-align: center;
    line-height: 20px;
    margin-right: 30px;
    margin-left: 20px;
    height: 50%;
}

.tutorial-text h4 {
    text-align: center;
    text-transform: uppercase;
    text-decoration: underline;
    margin-left: 20px;
    font-weight: bold;
    
}

iframe {
    height: 300px;
    width: 400px;
    margin: 0 auto;
}

.info > p {
    float: left;
    margin: 0;
    padding: 0;
}

/* image background for index.html information sections */

#text-image {
    background: url('../images/nightsky.jpeg');
    background-color: #462684;
    margin-top: 10px;
    height: 400px;
    width: 100%;
    position: center cover no-repeat;
    display: inline-block;
}


/* navigation menu */

.navigation-menu {
    letter-spacing: 3px;
}

.navigation-menu li {
    float: right;
    list-style-type: none;
}

.navigation-menu a{
    width: 100%;
    font-size: 190%;
    text-decoration: none;
    font-family: Roboto, sans-serif;
    color: #3a3a3a;
    padding: 15px;
}


.navigation-menu, #logo {
    line-height: 150px;
}

.navigation-menu a:hover {
    color: #a393eb;
}

/* hero image */

.hero-image {
    margin-top: 0;
    height: 250px;
    width: 100%;
    background: url('../images/hero-image.jpg') no-repeat;
    background-position: 2% 20%;
}

/* social media links styling */

.social-media {
    text-align: center;  
}

.social-media > li {
    display: inline;
}

.social-media i {
    color: #4B4453;
    font-size: 150%;
    margin: 15px 20px;
    padding: 14px;
}

.social-media i:hover {
    color: #a393eb;
}
/* ... */

